core/force-app/main/default/objects/SchedulerJob__c/SchedulerJob__c.object-meta.xml
<CustomObject>
    <label>Scheduler Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduler Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>