core/force-app/main/default/objects/SchedulerJob__c/fields/CronTriggerId__c.field-meta.xml
<CustomField>
    <fullName>CronTriggerId__c</fullName>
    <description>Cron Trigger ID of the Service Scheduler</description>
    <label>Cron Trigger Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>