core/force-app/main/default/objects/SchedulerJob__c/fields/On__c.field-meta.xml
<CustomField>
    <fullName>On__c</fullName>
    <description>On</description>
    <label>On</label>
    <type>DateTime</type>
</CustomField>