core/force-app/main/default/objects/SchedulerJob__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Provider</description>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Provider</label>
    <referenceTo>SchedulerProvider__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>